fix alignment issue for the footer in chrome

--- a/css/style.css
+++ b/css/style.css
@@ -178,8 +178,8 @@ footer {
 	grid-area: footer;
 	text-align: right;
 	display: flex;
-	align-items: end;
-	justify-content: right;
+	align-items: flex-end;
+	justify-content: flex-end;
 }
 
 .container {
